Update user roles and move token claiming journeys table below EVM verification

--- a/index.html
+++ b/index.html
@@ -138,78 +138,6 @@
 
     <div class="container">
         <section id="test-accounts" class="mb-5">
-            <div class="card">
-                <div class="card-header bg-light">
-                    <h3 class="h5 mb-0">DCP users token claiming journeys</h3>
-                </div>
-                <div class="card-body p-0">
-                    <div class="table-responsive">
-                        <table class="table table-hover mb-0">
-                            <thead class="bg-light">
-                                <tr>
-                                    <th>Account Name</th>
-                                    <th>User Role</th>
-                                    <th>Authentication</th>
-                                    <th>User Experience Video</th>
-                                    <th>Moderator</th>
-                                    <th>Verification</th>
-                                </tr>
-                            </thead>
-                            <tbody id="test-accounts-body">
-                                <tr id="account-kanley">
-                                    <td>Kanley Stubrick</td>
-                                    <td><span class="badge bg-primary">Visionary Founder</span></td>
-                                    <td><span class="badge bg-info">Google Auth</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
-                                    <td><span class="text-success">Yes</span></td>
-                                    <td><span class="badge bg-secondary">Not Complete</span></td>
-                                </tr>
-                                <tr id="account-herner">
-                                    <td>Herner werzog</td>
-                                    <td><span class="badge bg-warning text-dark">Security-minded Submitter</span></td>
-                                    <td><span class="badge bg-info">Google Auth</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
-                                    <td><span class="text-danger">No</span></td>
-                                    <td><span class="badge bg-secondary">Not Complete</span></td>
-                                </tr>
-                                <tr id="account-twitter">
-                                    <td>TwitterProd</td>
-                                    <td><span class="badge bg-info">Social Media User</span></td>
-                                    <td><span class="badge bg-primary">X (Twitter)</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
-                                    <td><span class="text-danger">No</span></td>
-                                    <td><span class="badge bg-secondary">Not Complete</span></td>
-                                </tr>
-                                <tr id="account-keith">
-                                    <td>Keith Fellini</td>
-                                    <td><span class="badge bg-success">Baker / Validator</span></td>
-                                    <td><span class="badge bg-success">Sentinel Wallet</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
-                                    <td><span class="text-danger">No</span></td>
-                                    <td><span class="badge bg-secondary">Not Complete</span></td>
-                                </tr>
-                                <tr id="account-sandra">
-                                    <td>Sandra Blockchain</td>
-                                    <td><span class="badge bg-warning text-dark">Hardware Wallet User</span></td>
-                                    <td><span class="badge bg-warning">FIL Wallet (Ledger Nano S)</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
-                                    <td><span class="text-danger">No</span></td>
-                                    <td><span class="badge bg-secondary">Not Complete</span></td>
-                                </tr>
-                                <tr id="account-new-user" class="table-secondary">
-                                    <td>New User</td>
-                                    <td><span class="badge bg-dark">First-time User</span></td>
-                                    <td><span class="badge bg-dark">None</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-secondary disabled"><i class="bi bi-x-circle me-1"></i>No Journey</a></td>
-                                    <td><span class="text-danger">No</span></td>
-                                    <td><span class="badge bg-danger">Not Migrated</span></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-
             <div class="row mt-4 mb-4">
                 <div class="col-xl-6 col-md-8">
                     <div class="card border-left-primary shadow h-100 py-2">
@@ -293,6 +221,78 @@
                                 <small class="d-block mt-2">NFT verification performed using <code>cast call 0xdC3E83b88762B6FF14f4a938052652FDCa8eBeB0 "getUserNftIds(string)(uint256[])" "tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33"</code></small>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <div class="card-header bg-light">
+                    <h3 class="h5 mb-0">DCP users token claiming journeys</h3>
+                </div>
+                <div class="card-body p-0">
+                    <div class="table-responsive">
+                        <table class="table table-hover mb-0">
+                            <thead class="bg-light">
+                                <tr>
+                                    <th>Account Name</th>
+                                    <th>User Role</th>
+                                    <th>Authentication</th>
+                                    <th>User Experience Video</th>
+                                    <th>Moderator</th>
+                                    <th>Verification</th>
+                                </tr>
+                            </thead>
+                            <tbody id="test-accounts-body">
+                                <tr id="account-kanley">
+                                    <td>Kanley Stubrick</td>
+                                    <td><span class="badge bg-primary">Experienced Frequent User</span></td>
+                                    <td><span class="badge bg-info">Google Auth</span></td>
+                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><span class="text-success">Yes</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
+                                </tr>
+                                <tr id="account-herner">
+                                    <td>Herner werzog</td>
+                                    <td><span class="badge bg-warning text-dark">Casual User</span></td>
+                                    <td><span class="badge bg-info">Google Auth</span></td>
+                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
+                                </tr>
+                                <tr id="account-twitter">
+                                    <td>TwitterProd</td>
+                                    <td><span class="badge bg-info">Social Media User</span></td>
+                                    <td><span class="badge bg-primary">X (Twitter)</span></td>
+                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
+                                </tr>
+                                <tr id="account-keith">
+                                    <td>Keith Fellini</td>
+                                    <td><span class="badge bg-success">Baker / Validator</span></td>
+                                    <td><span class="badge bg-success">Sentinel Wallet</span></td>
+                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
+                                </tr>
+                                <tr id="account-sandra">
+                                    <td>Sandra Blockchain</td>
+                                    <td><span class="badge bg-warning text-dark">T4L3NT Mainnet Hodler</span></td>
+                                    <td><span class="badge bg-warning">Ledger Nano S</span></td>
+                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
+                                </tr>
+                                <tr id="account-new-user" class="table-secondary">
+                                    <td>New User</td>
+                                    <td><span class="badge bg-dark">First-time User</span></td>
+                                    <td><span class="badge bg-dark">None</span></td>
+                                    <td><a href="#" class="btn btn-sm btn-outline-secondary disabled"><i class="bi bi-x-circle me-1"></i>No Journey</a></td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td><span class="badge bg-danger">Not Migrated</span></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
