Add claiming journey videos and update dashboard links

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                     <td>Kanley Stubrick</td>
                                     <td><span class="badge bg-primary">Experienced Frequent User</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><a href="journey-videos/kanley-stubrick-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-success">Yes</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -255,7 +255,7 @@
                                     <td>Herner werzog</td>
                                     <td><span class="badge bg-warning text-dark">Casual User</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><button class="btn btn-sm btn-outline-secondary" disabled><i class="bi bi-clock me-1"></i>No video yet</button></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -263,7 +263,7 @@
                                     <td>TwitterProd</td>
                                     <td><span class="badge bg-info">Social Media User</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><a href="journey-videos/twitter-user-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -271,7 +271,7 @@
                                     <td>Keith Fellini</td>
                                     <td><span class="badge bg-success">Baker / Validator</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><a href="journey-videos/keith-fellini-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -279,7 +279,7 @@
                                     <td>Sandra Blockchain</td>
                                     <td><span class="badge bg-warning text-dark">T4L3NT Mainnet Hodler</span></td>
                                     <td><span class="badge bg-warning">Ledger Nano S</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
+                                    <td><a href="journey-videos/sandra-blockchain-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -287,7 +287,7 @@
                                     <td>New User</td>
                                     <td><span class="badge bg-dark">First-time User</span></td>
                                     <td><span class="badge bg-dark">None</span></td>
-                                    <td><a href="#" class="btn btn-sm btn-outline-secondary disabled"><i class="bi bi-x-circle me-1"></i>No Journey</a></td>
+                                    <td><button class="btn btn-sm btn-outline-secondary" disabled><i class="bi bi-x-circle me-1"></i>No Journey</button></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-danger">Not Migrated</span></td>
                                 </tr>
