Add delegation column and update Sandra's FILM delegation to Keith Fellini

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                                     <th>Account Name</th>
                                     <th>User Role</th>
                                     <th>Authentication</th>
+                                    <th>Delegation</th>
                                     <th>User Experience Video</th>
                                     <th>Moderator</th>
                                     <th>Verification</th>
@@ -247,6 +248,7 @@
                                     <td>Kanley Stubrick</td>
                                     <td><span class="badge bg-primary">Experienced Frequent User</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><a href="journey-videos/kanley-stubrick-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-success">Yes</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -255,6 +257,7 @@
                                     <td>Herner werzog</td>
                                     <td><span class="badge bg-warning text-dark">Casual User</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><button class="btn btn-sm btn-outline-secondary" disabled><i class="bi bi-clock me-1"></i>No video yet</button></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -263,6 +266,7 @@
                                     <td>TwitterProd</td>
                                     <td><span class="badge bg-info">Social Media User</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><a href="journey-videos/twitter-user-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -271,6 +275,7 @@
                                     <td>Keith Fellini</td>
                                     <td><span class="badge bg-success">Baker / Validator</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
+                                    <td><span class="badge bg-info">Receives delegations</span></td>
                                     <td><a href="journey-videos/keith-fellini-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -278,7 +283,8 @@
                                 <tr id="account-sandra">
                                     <td>Sandra Blockchain</td>
                                     <td><span class="badge bg-warning text-dark">T4L3NT Mainnet Hodler</span></td>
-                                    <td><span class="badge bg-warning">Ledger Nano S</span></td>
+                                    <td><span class="badge bg-warning">Ledger Nano S</span><br><small class="text-muted">+ Temple Wallet</small></td>
+                                    <td><span class="badge bg-success">FILM → Keith Fellini</span><br><small class="text-muted">T4L3NT Mainnet</small></td>
                                     <td><a href="journey-videos/sandra-blockchain-claiming-journey.mp4" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -287,6 +293,7 @@
                                     <td>New User</td>
                                     <td><span class="badge bg-dark">First-time User</span></td>
                                     <td><span class="badge bg-dark">None</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><button class="btn btn-sm btn-outline-secondary" disabled><i class="bi bi-x-circle me-1"></i>No Journey</button></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-danger">Not Migrated</span></td>
